--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -363,7 +363,7 @@
     </div>
 
     <!-- スクリプト -->
-    <script src="../js/components/settings.js"></script>
-    <script src="../js/renderer.js"></script>
+    <script src="../js/components/settings.mjs"></script>
+    <script src="../js/renderer.mjs"></script>
 </body>
 </html> 
