--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -288,12 +288,16 @@
                         </div>
 
                         <!-- フィルターボタン -->
-                        <div class="flex space-x-2 pt-2 border-t border-slate-200">
-                            <button id="applyFilter" class="flex-1 px-3 py-1.5 text-xs bg-blue-500 hover:bg-blue-600 text-white rounded-md shadow-sm transition-colors">
-                                適用
+                        <div class="flex space-x-2 mb-4">
+                            <button id="applyFilter" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors">
+                                フィルター適用
                             </button>
-                            <button id="resetFilter" class="flex-1 px-3 py-1.5 text-xs bg-slate-400 hover:bg-slate-500 text-white rounded-md shadow-sm transition-colors">
+                            <button id="resetFilter" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400 transition-colors">
                                 リセット
+                            </button>
+                            <div class="border-l border-gray-300 mx-2"></div>
+                            <button id="showAdvancedFilter" class="px-4 py-2 bg-purple-500 text-white rounded hover:bg-purple-600 transition-colors">
+                                高度なフィルター
                             </button>
                         </div>
                     </div>
@@ -392,6 +396,188 @@
             <button id="cleanupMemory" class="ml-2 px-2 py-1 text-xs bg-blue-500 text-white rounded hover:bg-blue-600">
                 クリーンアップ
             </button>
+        </div>
+
+        <!-- 高度なフィルタリングパネル -->
+        <div id="advancedFilterPanel" class="bg-white border border-gray-200 rounded-lg p-4 mb-4 hidden">
+            <div class="flex items-center justify-between mb-4">
+                <h3 class="text-lg font-semibold text-gray-900">高度なフィルタリング</h3>
+                <div class="flex space-x-2">
+                    <button id="saveFilterPreset" class="px-3 py-1 text-sm bg-blue-500 text-white rounded hover:bg-blue-600">
+                        プリセット保存
+                    </button>
+                    <button id="loadFilterPreset" class="px-3 py-1 text-sm bg-green-500 text-white rounded hover:bg-green-600">
+                        プリセット読み込み
+                    </button>
+                    <button id="closeAdvancedFilter" class="text-gray-400 hover:text-gray-600">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <!-- 日時範囲フィルター -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">保存日時範囲</label>
+                    <div class="space-y-2">
+                        <div>
+                            <label class="block text-xs text-gray-600">開始日時</label>
+                            <input type="datetime-local" id="dateFrom" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <div>
+                            <label class="block text-xs text-gray-600">終了日時</label>
+                            <input type="datetime-local" id="dateTo" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ファイル名パターンフィルター -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">ファイル名パターン</label>
+                    <div class="space-y-2">
+                        <div>
+                            <label class="block text-xs text-gray-600">パターン</label>
+                            <input type="text" id="filenamePattern" placeholder="例: *.jpg, IMG_*, 2023*" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <div class="flex items-center space-x-2">
+                            <input type="checkbox" id="useRegex" class="rounded border-gray-300 text-blue-600 focus:ring-blue-500">
+                            <label class="text-xs text-gray-600">正規表現を使用</label>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ファイルサイズ範囲フィルター -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">ファイルサイズ範囲</label>
+                    <div class="space-y-2">
+                        <div>
+                            <label class="block text-xs text-gray-600">最小サイズ (MB)</label>
+                            <input type="number" id="sizeFrom" min="0" step="0.1" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <div>
+                            <label class="block text-xs text-gray-600">最大サイズ (MB)</label>
+                            <input type="number" id="sizeTo" min="0" step="0.1" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 解像度フィルター -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">解像度フィルター</label>
+                    <div class="space-y-2">
+                        <div>
+                            <label class="block text-xs text-gray-600">最小解像度</label>
+                            <input type="text" id="resolutionMin" placeholder="例: 1920x1080" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <div>
+                            <label class="block text-xs text-gray-600">最大解像度</label>
+                            <input type="text" id="resolutionMax" placeholder="例: 3840x2160" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- カスタム条件フィルター -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">カスタム条件</label>
+                    <div class="space-y-2">
+                        <select id="customCondition" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            <option value="">条件を選択</option>
+                            <option value="recent">最近のファイル（7日以内）</option>
+                            <option value="old">古いファイル（1年以上）</option>
+                            <option value="large">大きなファイル（10MB以上）</option>
+                            <option value="small">小さなファイル（1MB以下）</option>
+                            <option value="highRes">高解像度（4K以上）</option>
+                            <option value="lowRes">低解像度（HD以下）</option>
+                        </select>
+                    </div>
+                </div>
+
+                <!-- ソート設定 -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">ソート設定</label>
+                    <div class="space-y-2">
+                        <select id="sortBy" class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            <option value="name">ファイル名</option>
+                            <option value="size">ファイルサイズ</option>
+                            <option value="date">更新日時</option>
+                            <option value="blurScore">ブレスコア</option>
+                            <option value="similarity">類似度</option>
+                        </select>
+                        <div class="flex items-center space-x-2">
+                            <input type="radio" name="sortOrder" value="asc" checked class="rounded border-gray-300 text-blue-600 focus:ring-blue-500">
+                            <label class="text-xs text-gray-600">昇順</label>
+                            <input type="radio" name="sortOrder" value="desc" class="rounded border-gray-300 text-blue-600 focus:ring-blue-500">
+                            <label class="text-xs text-gray-600">降順</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex justify-between items-center mt-4 pt-4 border-t border-gray-200">
+                <div class="text-sm text-gray-600">
+                    <span id="advancedFilterCount">0</span>件の条件が適用されています
+                </div>
+                <div class="flex space-x-2">
+                    <button id="applyAdvancedFilter" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors">
+                        フィルター適用
+                    </button>
+                    <button id="resetAdvancedFilter" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400 transition-colors">
+                        リセット
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- フィルタープリセット管理ダイアログ -->
+        <div id="filterPresetDialog" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+            <div class="bg-white rounded-lg p-6 w-96 max-w-full mx-4">
+                <div class="flex items-center justify-between mb-4">
+                    <h3 class="text-lg font-semibold text-gray-900">フィルタープリセット</h3>
+                    <button id="closeFilterPreset" class="text-gray-400 hover:text-gray-600">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                        </svg>
+                    </button>
+                </div>
+
+                <div id="presetContent" class="space-y-4">
+                    <!-- プリセット保存フォーム -->
+                    <div id="savePresetForm" class="space-y-4">
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-2">プリセット名</label>
+                            <input type="text" id="presetName" placeholder="プリセット名を入力" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-2">説明</label>
+                            <textarea id="presetDescription" placeholder="プリセットの説明" rows="3" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+                        </div>
+                        <button id="savePreset" class="w-full px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors">
+                            プリセットを保存
+                        </button>
+                    </div>
+
+                    <!-- プリセット一覧 -->
+                    <div id="loadPresetForm" class="space-y-4 hidden">
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-2">保存済みプリセット</label>
+                            <div id="presetList" class="space-y-2 max-h-48 overflow-y-auto">
+                                <!-- プリセット一覧がここに表示される -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex space-x-2 mt-6">
+                    <button id="switchToLoad" class="flex-1 px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition-colors">
+                        プリセット読み込み
+                    </button>
+                    <button id="switchToSave" class="flex-1 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors">
+                        プリセット保存
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
