--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://fonts.googleapis.com https://fonts.gstatic.com; img-src 'self' data: blob:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com;">
     <title>イメージクリーンアップアシスタント</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -55,6 +56,16 @@
             </div>
             <div class="flex items-center space-x-2 self-end sm:self-center">
                 <button id="scanButton" class="px-4 py-1.5 text-sm bg-blue-500 hover:bg-blue-600 text-white rounded-md shadow-sm transition-colors whitespace-nowrap">スキャン開始</button>
+                <button id="showExportReport" title="エクスポート・レポート" class="p-1.5 rounded-md hover:bg-slate-200 transition-colors text-slate-600 hover:text-slate-800">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+                        <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z"/>
+                    </svg>
+                </button>
+                <button id="showProcessingLog" title="処理ログ" class="p-1.5 rounded-md hover:bg-slate-200 transition-colors text-slate-600 hover:text-slate-800">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+                        <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z M9,12H15V14H9V12M9,16H15V18H9V16M9,8H15V10H9V8Z"/>
+                    </svg>
+                </button>
                 <button id="settingsButton" title="設定" class="p-1.5 rounded-md hover:bg-slate-200 transition-colors text-slate-600 hover:text-slate-800">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
                         <path d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 l-3.84,0c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.03c-0.59,0.24-1.13,0.57-1.62,0.96l-2.39-0.96c-0.22-0.08-0.47,0-0.59,0.22 l-1.92,3.32c-0.11,0.2-0.06,0.47,0.12,0.61l2.03,1.58C4.02,11.36,4,11.68,4,12s0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.22 c0.04,0.24,0.24,0.41,0.48,0.41l3.84,0c0.24,0,0.43-0.17,0.47,0.41l0.36-2.22c0.59-0.24,1.13-0.57,1.62-0.96l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.11-0.2,0.06-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"/>
@@ -579,6 +590,190 @@
                 </div>
             </div>
         </div>
+
+        <!-- エクスポート・レポートパネル -->
+        <div id="exportReportPanel" class="bg-white border border-gray-200 rounded-lg p-4 mb-4 hidden">
+            <div class="flex items-center justify-between mb-4">
+                <h3 class="text-lg font-semibold text-gray-900">エクスポート・レポート</h3>
+                <div class="flex space-x-2">
+                    <button id="generateReport" class="px-3 py-1 text-sm bg-green-500 text-white rounded hover:bg-green-600">
+                        レポート生成
+                    </button>
+                    <button id="closeExportReport" class="text-gray-400 hover:text-gray-600">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <!-- エクスポート設定 -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">エクスポート形式</label>
+                    <div class="space-y-2">
+                        <label class="flex items-center">
+                            <input type="radio" name="exportFormat" value="csv" checked class="mr-2">
+                            <span class="text-sm">CSV</span>
+                        </label>
+                        <label class="flex items-center">
+                            <input type="radio" name="exportFormat" value="json" class="mr-2">
+                            <span class="text-sm">JSON</span>
+                        </label>
+                        <label class="flex items-center">
+                            <input type="radio" name="exportFormat" value="excel" class="mr-2">
+                            <span class="text-sm">Excel</span>
+                        </label>
+                    </div>
+                </div>
+
+                <!-- エクスポート対象 -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">エクスポート対象</label>
+                    <div class="space-y-2">
+                        <label class="flex items-center">
+                            <input type="checkbox" id="exportCurrentTab" checked class="mr-2">
+                            <span class="text-sm">現在のタブ</span>
+                        </label>
+                        <label class="flex items-center">
+                            <input type="checkbox" id="exportAllTabs" class="mr-2">
+                            <span class="text-sm">全タブ</span>
+                        </label>
+                        <label class="flex items-center">
+                            <input type="checkbox" id="exportSelected" class="mr-2">
+                            <span class="text-sm">選択されたアイテムのみ</span>
+                        </label>
+                    </div>
+                </div>
+
+                <!-- レポート設定 -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-700">レポート設定</label>
+                    <div class="space-y-2">
+                        <label class="flex items-center">
+                            <input type="checkbox" id="includeStats" checked class="mr-2">
+                            <span class="text-sm">統計情報を含める</span>
+                        </label>
+                        <label class="flex items-center">
+                            <input type="checkbox" id="includeMetadata" checked class="mr-2">
+                            <span class="text-sm">メタデータを含める</span>
+                        </label>
+                        <label class="flex items-center">
+                            <input type="checkbox" id="includeProcessingHistory" class="mr-2">
+                            <span class="text-sm">処理履歴を含める</span>
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex justify-between items-center mt-4 pt-4 border-t border-gray-200">
+                <div class="text-sm text-gray-600">
+                    <span id="exportItemCount">0</span>件のアイテムがエクスポートされます
+                </div>
+                <div class="flex space-x-2">
+                    <button id="exportData" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors">
+                        エクスポート
+                    </button>
+                    <button id="previewReport" class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition-colors">
+                        プレビュー
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- レポートプレビューダイアログ -->
+        <div id="reportPreviewDialog" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+            <div class="bg-white rounded-lg p-6 w-4/5 max-w-6xl mx-4 max-h-5/6 overflow-hidden flex flex-col">
+                <div class="flex items-center justify-between mb-4">
+                    <h3 class="text-lg font-semibold text-gray-900">レポートプレビュー</h3>
+                    <div class="flex space-x-2">
+                        <button id="exportFromPreview" class="px-3 py-1 text-sm bg-blue-500 text-white rounded hover:bg-blue-600">
+                            エクスポート
+                        </button>
+                        <button id="closeReportPreview" class="text-gray-400 hover:text-gray-600">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="flex space-x-4 flex-1 overflow-hidden">
+                    <!-- レポートナビゲーション -->
+                    <div class="w-64 bg-gray-50 p-4 rounded-lg overflow-y-auto">
+                        <h4 class="font-medium text-gray-900 mb-3">レポートセクション</h4>
+                        <nav id="reportNavigation" class="space-y-2">
+                            <!-- ナビゲーション項目がここに生成される -->
+                        </nav>
+                    </div>
+
+                    <!-- レポートコンテンツ -->
+                    <div id="reportContent" class="flex-1 overflow-y-auto bg-white border border-gray-200 rounded-lg p-4">
+                        <!-- レポート内容がここに表示される -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 処理ログビューア -->
+        <div id="processingLogDialog" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+            <div class="bg-white rounded-lg p-6 w-3/4 max-w-5xl mx-4 max-h-4/5 overflow-hidden flex flex-col">
+                <div class="flex items-center justify-between mb-4">
+                    <h3 class="text-lg font-semibold text-gray-900">処理ログ</h3>
+                    <div class="flex space-x-2">
+                        <button id="exportLog" class="px-3 py-1 text-sm bg-blue-500 text-white rounded hover:bg-blue-600">
+                            ログエクスポート
+                        </button>
+                        <button id="clearLog" class="px-3 py-1 text-sm bg-red-500 text-white rounded hover:bg-red-600">
+                            ログクリア
+                        </button>
+                        <button id="closeProcessingLog" class="text-gray-400 hover:text-gray-600">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="flex space-x-4 flex-1 overflow-hidden">
+                    <!-- ログフィルター -->
+                    <div class="w-48 bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-medium text-gray-900 mb-3">ログフィルター</h4>
+                        <div class="space-y-2">
+                            <label class="flex items-center">
+                                <input type="checkbox" id="logInfo" checked class="mr-2">
+                                <span class="text-sm">情報</span>
+                            </label>
+                            <label class="flex items-center">
+                                <input type="checkbox" id="logWarning" checked class="mr-2">
+                                <span class="text-sm">警告</span>
+                            </label>
+                            <label class="flex items-center">
+                                <input type="checkbox" id="logError" checked class="mr-2">
+                                <span class="text-sm">エラー</span>
+                            </label>
+                            <label class="flex items-center">
+                                <input type="checkbox" id="logSuccess" checked class="mr-2">
+                                <span class="text-sm">成功</span>
+                            </label>
+                        </div>
+                        <div class="mt-4">
+                            <label class="block text-sm font-medium text-gray-700 mb-2">日時範囲</label>
+                            <input type="date" id="logDateFrom" class="w-full px-2 py-1 text-sm border border-gray-300 rounded">
+                            <input type="date" id="logDateTo" class="w-full px-2 py-1 text-sm border border-gray-300 rounded mt-1">
+                        </div>
+                        <button id="applyLogFilter" class="w-full mt-3 px-3 py-1 text-sm bg-blue-500 text-white rounded hover:bg-blue-600">
+                            フィルター適用
+                        </button>
+                    </div>
+
+                    <!-- ログコンテンツ -->
+                    <div id="logContent" class="flex-1 overflow-y-auto bg-gray-900 text-green-400 p-4 rounded-lg font-mono text-sm">
+                        <!-- ログ内容がここに表示される -->
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- 確認ダイアログモーダル -->
@@ -1036,7 +1231,7 @@
     </div>
 
     <!-- スクリプト -->
-    <script src="../js/components/settings.mjs"></script>
-    <script src="../js/renderer.mjs"></script>
+    <script src="../js/components/settings.js"></script>
+    <script src="../js/renderer.js"></script>
 </body>
 </html> 
