エクスポート・レポート機能を強化し、エクスポート設定のUIを改善しました。新しいエクスポート・レポートパネルを追加し、プレビュー機能や処理ログの表示機能を実装しました。また、エクスポート形式の選択や含める情報の設定を追加し、ユーザーインターフェースを向上させました。

--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -1232,6 +1232,7 @@
 
     <!-- スクリプト -->
     <script src="../js/components/settings.js"></script>
+    <script src="../js/components/exportReport.js"></script>
     <script src="../js/renderer.js"></script>
 </body>
 </html> 
