--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -39,18 +39,11 @@
         <!-- ヘッダーエリア -->
         <div class="bg-white p-3 shadow flex flex-col sm:flex-row items-start sm:items-center space-y-2 sm:space-y-0 sm:space-x-4 border-b border-slate-200">
             <div class="flex-grow w-full">
-                <div class="flex items-center mb-1 sm:mb-0">
+                <div class="flex items-center">
                     <label for="targetFolder" class="text-sm font-medium text-slate-700 whitespace-nowrap">対象フォルダ:</label>
                     <button id="targetFolder" class="ml-1 px-3 py-1.5 text-sm bg-blue-500 hover:bg-blue-600 text-white rounded-md shadow-sm transition-colors">選択...</button>
                     <span id="targetFolderPathDisplay" class="ml-2 text-sm text-slate-600 truncate">
                         フォルダを選択してください
-                    </span>
-                </div>
-                <div class="flex items-center">
-                    <label for="outputFolder" class="text-sm font-medium text-slate-700 whitespace-nowrap">移動フォルダ:</label>
-                    <button id="outputFolder" class="ml-1 px-3 py-1.5 text-sm bg-slate-500 hover:bg-slate-600 text-white rounded-md shadow-sm transition-colors">選択...</button>
-                    <span id="outputFolderPathDisplay" class="ml-2 text-sm text-slate-600 truncate">
-                        移動先フォルダを選択してください
                     </span>
                 </div>
             </div>
@@ -68,7 +61,7 @@
                 </button>
                 <button id="settingsButton" title="設定" class="p-1.5 rounded-md hover:bg-slate-200 transition-colors text-slate-600 hover:text-slate-800">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-                        <path d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 l-3.84,0c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.03c-0.59,0.24-1.13,0.57-1.62,0.96l-2.39-0.96c-0.22-0.08-0.47,0-0.59,0.22 l-1.92,3.32c-0.11,0.2-0.06,0.47,0.12,0.61l2.03,1.58C4.02,11.36,4,11.68,4,12s0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.22 c0.04,0.24,0.24,0.41,0.48,0.41l3.84,0c0.24,0,0.43-0.17,0.47,0.41l0.36-2.22c0.59-0.24,1.13-0.57,1.62-0.96l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.11-0.2,0.06-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"/>
+                        <path d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 l-3.84,0c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.03c-0.59,0.24-1.13,0.57-1.62,0.96l-2.39-0.96c-0.22-0.08-0.47,0-0.59,0.22 l-1.92,3.32c-0.11,0.2-0.06,0.47,0.12,0.61l2.03,1.58C4.02,11.36,4,11.68,4,12s0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.22 c0.04,0.24,0.24,0.41,0.48,0.41l3.84,0c0.24,0,0.43-0.17,0.47,0.41l0.36-2.22c0.59-0.24,1.13-0.57,1.62-0.96l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.11-0.2,0.06-0.47-0.12,0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"/>
                     </svg>
                 </button>
             </div>
@@ -815,6 +808,20 @@
                                         <label for="deletePermanently" class="ml-2 block text-sm text-slate-700">直接完全に削除</label>
                                     </div>
                                 </fieldset>
+                            </div>
+                            
+                            <div>
+                                <label class="block text-sm font-medium text-slate-700 mb-2">
+                                    移動先フォルダ（デフォルト）
+                                </label>
+                                <div class="flex space-x-2">
+                                    <input type="text" id="defaultOutputFolder" placeholder="移動先フォルダを選択してください" 
+                                           class="flex-1 px-3 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500" readonly>
+                                    <button id="changeOutputFolder" class="px-4 py-2 bg-slate-100 text-slate-700 rounded-md hover:bg-slate-200">
+                                        選択...
+                                    </button>
+                                </div>
+                                <p class="text-xs text-slate-500 mt-1">「移動」ボタンを使用する際のデフォルトの移動先フォルダを設定します</p>
                             </div>
                         </div>
                     </div>
