チェックボックスの状態管理機能を追加し、プレビュー選択状態のスタイルを改善しました。これにより、ユーザーが選択した画像の状態を保持し、プレビュー表示時の操作性が向上しました。

--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -32,6 +32,14 @@
             border-bottom-color: #3b82f6 !important;
             color: #3b82f6 !important;
         }
+        /* プレビュー選択状態のスタイル */
+        .preview-selected {
+            background-color: #dbeafe !important;
+            border-left: 4px solid #3b82f6 !important;
+        }
+        .preview-selected:hover {
+            background-color: #bfdbfe !important;
+        }
     </style>
 </head>
 <body class="bg-slate-100 text-slate-800">
