キャッシュ機能に関連する設定を削除し、ファイル監視機能の設定を強化しました。これにより、設定管理が簡素化され、ユーザー体験が向上しました。

--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -798,23 +798,7 @@
                                            class="rounded border-slate-300 text-blue-600 focus:ring-blue-500">
                                     <span class="ml-2 text-sm text-slate-700">ファイル監視を有効にする</span>
                                 </label>
-                                <p class="text-xs text-slate-500 mt-1 ml-6">フォルダ内のファイル変更を自動的に検知してキャッシュを無効化します</p>
-                            </div>
-                            <div>
-                                <label class="flex items-center">
-                                    <input type="checkbox" id="cacheEnabled" checked 
-                                           class="rounded border-slate-300 text-blue-600 focus:ring-blue-500">
-                                    <span class="ml-2 text-sm text-slate-700">キャッシュ機能を有効にする</span>
-                                </label>
-                                <p class="text-xs text-slate-500 mt-1 ml-6">スキャン結果をキャッシュして再スキャンを高速化します</p>
-                            </div>
-                            <div>
-                                <label class="block text-sm font-medium text-slate-700 mb-2">
-                                    キャッシュの有効期限（時間）
-                                </label>
-                                <input type="number" id="cacheValidityHours" min="1" max="168" value="24" 
-                                       class="w-full px-3 py-2 border border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
-                                <p class="text-xs text-slate-500 mt-1">キャッシュデータの有効期限を設定します（1-168時間）</p>
+                                <p class="text-xs text-slate-500 mt-1 ml-6">フォルダ内のファイル変更を自動的に検知します</p>
                             </div>
                         </div>
                     </div>
