PowerShell用の開発起動スクリプトを追加し、package.jsonのdevスクリプトを更新しました。また、HTMLファイルでのスクリプトタイプをモジュールに変更し、renderer.jsに複数のユーティリティをインポートしました。さらに、ファイル操作とタブ管理のための新しいコンポーネントを追加し、ログ出力やUI操作のユーティリティを実装しました。これにより、コードの構造が整理され、機能が強化されました。

--- a/src/renderer/html/index.html
+++ b/src/renderer/html/index.html
@@ -967,6 +967,6 @@
 
     <!-- スクリプト -->
     <script src="../js/components/settings.js"></script>
-    <script src="../js/renderer.js"></script>
+    <script type="module" src="../js/renderer.js"></script>
 </body>
 </html> 
